@@ -9,7 +9,7 @@ public class ThreadInfoMain {
         // main 스레드
         Thread mainThread = Thread.currentThread();
         log("mainThread = " + mainThread);
-        log("mainThread.threadId() = " + mainThread.threadId());
+        log("mainThread.threadId() = " + mainThread.getId());
         log("mainThread.getName() = " + mainThread.getName());
         log("mainThread.getPriority() = " + mainThread.getPriority());
         log("mainThread.getThreadGroup() = " + mainThread.getThreadGroup());
@@ -18,7 +18,7 @@ public class ThreadInfoMain {
         // myThread 스레드
         Thread myThread = new Thread(new HelloRunnable(), "myThread");
         log("myThread = " + myThread);
-        log("myThread.threadId() = " + myThread.threadId());
+        log("myThread.threadId() = " + myThread.getId());
         log("myThread.getName() = " + myThread.getName());
         log("myThread.getPriority() = " + myThread.getPriority());
         log("myThread.getThreadGroup() = " + myThread.getThreadGroup());
